# claw-code

./: .claude.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  CYCLE_104-105_REVIEW_GUIDE.md  ERROR_HANDLING.md  PARITY.md  README.md  ROADMAP.md  SCHEMAS.md  USAGE.md  progress.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: PI-MONO-PARITY-DESIGN.md
patches/: 0001-replace-permissive-default-permission-mode.patch  0002-tighten-oauth-credentials-file-permissions.patch  0003-wire-permission-enforcer-into-tool-registry.patch  0004-fix-upstream-clippy-1.95-drift.patch  0005-fix-permission-rule-tool-name-case.patch  0006-revert-p1-enforcer-wiring.patch  (+5 more)
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  compact.rs  config.rs  config_validate.rs  conversation.rs  lane_events.rs  lib.rs  lsp_client.rs  lsp_discovery.rs  lsp_process.rs  lsp_transport.rs  mcp_server.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  policy_engine.rs  sandbox.rs  session_control.rs  trident.rs
rust/crates/runtime/src/lsp_client/: dispatch.rs  mod.rs  tests.rs  tests_lifecycle.rs  types.rs
rust/crates/runtime/src/lsp_process/: mod.rs  parse.rs  tests.rs
rust/crates/runtime/src/lsp_transport/: mod.rs  tests.rs
rust/crates/sdk/: Cargo.toml
rust/crates/sdk/src/: agent_context.rs  event_bus.rs  extension.rs  lib.rs  resource_loader.rs  review.rs  rpc.rs  session.rs  session_manager.rs  session_tree.rs  setup.rs  tool_registry.rs
web-ui/server/: pyproject.toml
web-ui/server/claw_web/: __init__.py  api.py  claw_runner.py  cli.py  config.py  db.py  mock_runner.py  projects.py  sessions.py  tmux_manager.py
web-ui/server/tests/: test_smoke.py
(+42 files in other folders)
